--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -4,6 +4,7 @@ p{
 	padding:px2em(20px,22px);
 	margin:0;
 	color: $black;
+	line-height: 1.25;
 	@extend %bpg_bc;
 	.red{
 		background-color: $red;
